# celery-graceful-shutdown

./: .env  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint.sh  pyproject.toml
app/src/app/: app.py  shutdown_cleanup.py  signal_handler.py
celery_worker/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
celery_worker/src/celery_worker/: celery_worker.py  tasks.py
integration-tests/: shutdown_backup.py  test_shutdown.py
