[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "celery (==5.3)",
    "redis (==5)",
    "tenacity (>=9.0.0,<10.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false 

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.4"

